--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -52,8 +52,8 @@
   color: #8e8ea0;
   opacity: 1;
 }
-.main input[type="submit"] {
-  padding: 12px 0;
+.main input[type="button"] {
+  padding: 12px;
   color: #fff;
   background-color: #10a37f;
   border: none;
@@ -64,4 +64,9 @@
 .main .result {
   font-weight: bold;
   margin-top: 40px;
+}
+
+
+.selectedImage {
+  box-shadow: 3px 3px black;
 }
