--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -52,7 +52,7 @@
   color: #8e8ea0;
   opacity: 1;
 }
-.main input[type="button"] {
+.main input[type="button"], .main input[type="submit"] {
   padding: 12px;
   color: #fff;
   background-color: #10a37f;
